# floripa-hack

./: Cargo.toml  README.md
src/: main.rs  nostr.rs  query_llm.rs  sloppy.rs  unleashed.rs
www/.well-known/: nostr.json
www/html/: index.html  sloppy-lnurl.txt
www/html/.well-known/: nostr.json
