[package]
name = "save-sloppy"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { version = "0.32.5", features = [ "serde" ] }
chrono = { version = "0.4.39", features = [ "serde" ] }
serde = { version = "1.0.218", features = [ "derive" ] }
tokio = { version = "1.43.0", features = [ "full" ] }
nostr-sdk = "0.39.0"
nwc = "0.39"
reqwest = { version = "0.12.12", features=  [ "json", "stream" ] }
serde_json = "1.0.139"
futures-util = "0.3.31"
